// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Number renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cukbMk"
      disabled={true}
      placeholder=" "
      type="number"
      value="123"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI smRdH"
      disabled={true}
      placeholder=" "
      type="number"
      value="123"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT blDaWQ"
    disabled={true}
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI gjQvyF"
        disabled={true}
        placeholder=" "
        type="number"
        value="123"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI iIlNIq"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI jXsvrt"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI dNeMXH"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd hQUWNw"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cukbMk"
      placeholder=" "
      readOnly={true}
      type="number"
      value="1234"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI smRdH"
      placeholder=" "
      readOnly={true}
      type="number"
      value="1234"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI gjQvyF"
        placeholder=" "
        readOnly={true}
        type="number"
        value="1234"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cukbMk"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI smRdH"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI gjQvyF"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cukbMk"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI smRdH"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI gjQvyF"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-RYuTI cukbMk"
      dir="rtl"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-RYuTI smRdH"
      dir="rtl"
      placeholder="e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI gjQvyF"
        dir="rtl"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-fHsjty RmHsK"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <input
      className="sc-RYuTI cukbMk"
      placeholder="medium e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <input
      className="sc-RYuTI smRdH"
      placeholder="large e.g. 1234"
      type="number"
    />
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT bdOikL"
    >
      <input
        className="sc-RYuTI jkzQug"
        placeholder="xlarge e.g. 1234"
        type="number"
      />
      <label
        className="sc-fHsjty cnpQxB"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Number supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      medium
    </label>
    <input
      className="sc-RYuTI fCtgVv"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <label
      className="sc-beZgAy kNIQVY"
    >
      large
    </label>
    <input
      className="sc-RYuTI fcArlY"
      placeholder="e.g. 1234"
      type="number"
    />
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dZiGjT jXscPG"
  >
    <div
      className="sc-iBBJcT hwIgqE"
    >
      <input
        className="sc-RYuTI gjQvyF"
        placeholder="e.g. 1234"
        type="number"
      />
      <label
        className="sc-fHsjty cnpQxB"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-dMhUDd iImKzM"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
